# Oblivion-agent

./: .env.example  .gitignore  Key.java  LICENSE  LLM2  MEMORY.md  README.md  Untitled.java  broken.py  fact.py  index.html  main.py  pyproject.toml  sample.py  script.js  styles.css
agent/: brain.py  code_chunker.py  core.py  core.py.backup  core.py.bak-complex  core.py.bak-prefix  core.py.bak-workspace  core.py.before_knowledge_patch  demo.py  friday.py  llm.py  models.py  parser.py  paths.py  rag.py  runtime.py  runtime.py.bak-complex  runtime.py.before_knowledge_patch  setup_wizard.py  symbol_index.py  updater.py  voice.py  watcher.py
db/: store.py
knowledge/: detector.py  injector.py
knowledge/packs/: database.md  debugging.md  deployment.md  django.md  docker.md  fastapi.md  nextjs.md  react.md  security.md  tailwind.md  testing.md  typescript.md  vue.md
mcp_server/: server.py
scripts/: index.py
test/: test.py
tools/: auto.py  bash.py  bash.py.bak-complex  diff.py  edit_file.py  filesystem.py  planner.py  registry.py  registry.py.bak-complex  registry.py.bak-workspace  search_code.py  symbol_tools.py
ui/: app.py  app.py.backup  app.py.backup.20260612_181912  app.py.bak-complex  app.py.bak-workspace  app.py.before_dedupe.20260612_110555  app.py.before_dockfix.20260612_112427  app.py.before_wavefix.20260612_112136  app.py.cyberpunk_backup  app.py.v2_backup
