[project]
name = "ai-agent"
version = "0.1.0"
description = "Local AI coding agent powered by qwen3-coder"
requires-python = ">=3.12"

dependencies = [
    "litellm>=1.40.0",
    "textual>=0.60.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "pathspec>=0.12.1",
    "pygments>=2.18.0",
    "chromadb>=1.5.9",
    "watchdog>=6.0.0",
    "faster-whisper>=1.2.1",
    "sounddevice>=0.5.5",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "edge-tts>=7.2.8",
    "elevenlabs>=2.52.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools", "db", "ui"]
