[project]
name = "oblivion-agent"
version = "2.5.3"
description = "OBLIVION — AI coding agent with voice, RAG, and multi-model support. Powered by M.E.E.R.A."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "R. Rohit", email = "rohit@example.com"},
]
keywords = ["ai", "agent", "coding", "llm", "voice", "rag", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "litellm>=1.40.0",
    "textual>=0.60.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "pathspec>=0.12.1",
    "pygments>=2.18.0",
    "chromadb>=1.5.0",
    "edge-tts>=6.1.0",
    "watchdog>=4.0.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.0",
    "numpy>=2.0.0",
    "scipy>=1.13.0",
]
premium-voice = [
    "elevenlabs>=1.0.0",
]
all = [
    "oblivion-agent[voice,premium-voice]",
]

[project.scripts]
oblivion = "ui.app:main"

[project.urls]
Homepage = "https://github.com/rohit/oblivion-agent"
Repository = "https://github.com/rohit/oblivion-agent"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools", "db", "ui", "knowledge"]

[tool.hatch.build.targets.wheel.force-include]
"knowledge/packs" = "knowledge/packs"
