[project]
name = "oblivion-agent"
version = "2.10.8"
description = "OBLIVION - Terminal AI coding agent with voice, RAG, and multi-model support. Powered by Meera."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "R. Rohit"}]
keywords = ["ai", "agent", "coding", "llm", "voice", "rag", "tui", "claude", "gemini", "groq", "ollama", "whisper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

dependencies = [
    "litellm>=1.40.0",
    "textual>=0.60.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "pathspec>=0.12.1",
    "pygments>=2.18.0",
    "chromadb>=1.5.0",
    "edge-tts>=6.1.0",
    "watchdog>=4.0.0",
    "mcp>=1.0.0",
    "elevenlabs>=2.52.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.0",
    "numpy>=2.0.0",
    "scipy>=1.13.0",
]
premium-voice = ["elevenlabs>=1.0.0"]
all = ["oblivion-agent[voice,premium-voice]"]

[project.scripts]
oblivion = "ui.app:main"

[project.urls]
Homepage = "https://github.com/Rohith-s-hub/Oblivion-agent"
Repository = "https://github.com/Rohith-s-hub/Oblivion-agent"
Issues = "https://github.com/Rohith-s-hub/Oblivion-agent/issues"
Documentation = "https://github.com/Rohith-s-hub/Oblivion-agent#readme"
Changelog = "https://github.com/Rohith-s-hub/Oblivion-agent/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "tools", "db", "ui", "knowledge", "mcp_server"]
